--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="47"
-    android:versionName="1.84" >
+    android:versionCode="49"
+    android:versionName="1.85" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -11,6 +11,9 @@
 
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.screen.portrait" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+    
     
     <supports-screens android:resizeable="true"
               android:smallScreens="true"
