--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="50"
-    android:versionName="1.86" >
+    android:versionCode="51"
+    android:versionName="2.00CR" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -26,12 +26,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.CAMERA" />
-    
-    <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
-    
+
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     
     
@@ -287,14 +282,6 @@
             android:name="MegaStreamingService"
             android:exported="false" >
         </service>
-
-        <service android:name="nz.mega.android.authenticator.MegaAuthenticatorService" android:exported="false" >
-		    <intent-filter>
-		        <action android:name="android.accounts.AccountAuthenticator" />
-		    </intent-filter>
-		    <meta-data android:name="android.accounts.AccountAuthenticator"
-		               android:resource="@xml/authenticator" />
-		</service>
         
         <receiver
 	        android:name="nz.mega.android.receivers.CameraEventReceiver"
