--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.mega.android"
     android:installLocation="internalOnly"
-    android:versionCode="51"
-    android:versionName="2.00CR" >
+    android:versionCode="52"
+    android:versionName="2.0" >
 
     <uses-sdk
         android:minSdkVersion="9"
