Bug #1573 - Camera Uploads screen doesn't show video files && SDK Update

--- a/jni/mega/Makefile.inc
+++ b/jni/mega/Makefile.inc
@@ -48,7 +48,7 @@ CPP_SOURCES= sdk/src/attrmap.cpp \
     sdk/src/posix/net.cpp  \
     sdk/src/posix/fs.cpp  \
     sdk/src/posix/waiter.cpp \
-    sdk/third_party/utf8proc/utf8proc.cpp \
+    sdk/src/mega_utf8proc.cpp \
     sdk/src/posix/waiter.cpp \
     sdk/src/posix/net.cpp \
     sdk/src/gfx.cpp \
