Update SDK and disable Sodium

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -56,7 +56,7 @@ MEGA_JAVA_OUTPUT_PATH=$(JNI_PATH)/../src
 MEGA_CONFIGURED=java_wrap.cxx
 MEGA_WRAPPER=megaapi.i
 
-all: $(SODIUM) $(CRYPTOPP) $(CURL) $(MEGA)
+all: $(CRYPTOPP) $(CURL) $(MEGA) #$(SODIUM) 
 	$(NDK_BUILD)
 
 $(OPENSSL): $(OPENSSL_CONFIGURED)
