--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -184,6 +184,7 @@
             android:name="FileStorageActivity"
             android:label="@string/app_name"
             android:theme="@style/login_activity"
+            android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
         </activity>
         
