--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -126,6 +126,14 @@
         </activity>
         
         <activity
+            android:name="SecureSelfiePreviewActivity"
+            android:label="@string/full_screen_image_viewer_label"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+            android:uiOptions="splitActionBarWhenNarrow" >
+        </activity>
+        
+        <activity
             android:name="FilePropertiesActivity"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
