--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@ proguard.config=proguard-android.txt:proguard-project.txt
 # Project target.
 target=android-21
 android.library.reference.1=../android-support-v7-appcompat
+android.library.reference.2=../google-play-services_lib
