--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.mega.android"
     android:installLocation="auto"
-    android:versionCode="62"
-    android:versionName="2.1" >
+    android:versionCode="66"
+    android:versionName="2.1gp3" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -28,6 +28,8 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    
+    <uses-permission android:name="com.android.vending.BILLING" />
     
     
     <application
