--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -104,6 +104,19 @@
             android:screenOrientation="portrait" >            
         </activity>
         
+        <activity
+		  android:name="com.dropbox.client2.android.AuthActivity"
+		  android:launchMode="singleTask"
+		  android:configChanges="orientation|keyboard">
+		  <intent-filter>
+		    <!-- Change this to be db- followed by your app key -->
+		    <data android:scheme="db-6tioyn8ka5l6hty" />
+		    <action android:name="android.intent.action.VIEW" />
+		    <category android:name="android.intent.category.BROWSABLE"/>
+		    <category android:name="android.intent.category.DEFAULT" />
+		  </intent-filter>
+		</activity>
+        
         <activity android:name="OpenLinkActivity" android:launchMode="singleTask" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" ></action>
