--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -292,6 +292,11 @@
             android:exported="false" >
         </service>
         
+         <service
+            android:name="DropboxImportService"
+            android:exported="false" >
+        </service>
+        
         <service
             android:name="DownloadService"
             android:exported="false" >
