--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -312,6 +312,11 @@
             android:exported="false" >
         </service>
         
+        <service
+            android:name="CreateThumbPreviewService"
+            android:exported="false" >
+        </service>
+        
         <!-- Used for Google Play Store Campaign Measurement-->
 		<service 
 		    android:name="com.google.android.gms.analytics.CampaignTrackingService" />
