--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -204,6 +204,28 @@
             </intent-filter>
         </activity>
         
+        <activity android:launchMode="singleTask" android:screenOrientation="portrait"
+                android:name="nz.mega.android.providers.FileProviderActivity"
+                android:label="@string/app_name"
+            	android:theme="@style/login_activity">
+                <intent-filter>
+                    <action
+                        android:name="android.intent.action.PICK"/>
+                    <category
+                        android:name="android.intent.category.DEFAULT"/>
+                    <category
+                        android:name="android.intent.category.OPENABLE"/>
+                    <data android:mimeType="text/plain"/>
+                    <data android:mimeType="*/*"/>
+                </intent-filter>
+                <intent-filter>
+			        <action android:name="android.intent.action.GET_CONTENT" />
+			        <category android:name="android.intent.category.OPENABLE" />
+			        <category android:name="android.intent.category.DEFAULT" />
+			        <data android:mimeType="*/*" />
+    			</intent-filter>
+            </activity>
+        
         <activity
             android:name="FileStorageActivity"
             android:label="@string/app_name"
@@ -367,6 +389,16 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
     	</receiver>
+    	
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="nz.mega.android.providers.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
         
     </application>
 
