--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -223,14 +223,27 @@
                         android:name="android.intent.category.DEFAULT"/>
                     <category
                         android:name="android.intent.category.OPENABLE"/>
-                    <data android:mimeType="text/plain"/>
-                    <data android:mimeType="*/*"/>
+                    <data android:mimeType="text/*"/>
+                    <data android:mimeType="application/*"/>
+                    <data android:mimeType="audio/*"/>
+                    <data android:mimeType="video/*"/>
+                    <data android:mimeType="image/*"/>
+                    <data android:mimeType="x-conference/*"/>
+                    <data android:mimeType="model/*"/>
+                    <data android:mimeType="chemical/*"/>
                 </intent-filter>
                 <intent-filter>
 			        <action android:name="android.intent.action.GET_CONTENT" />
 			        <category android:name="android.intent.category.OPENABLE" />
 			        <category android:name="android.intent.category.DEFAULT" />
-			        <data android:mimeType="*/*" />
+			        <data android:mimeType="text/*"/>
+                    <data android:mimeType="application/*"/>
+                    <data android:mimeType="audio/*"/>
+                    <data android:mimeType="video/*"/>
+                    <data android:mimeType="image/*"/>
+                    <data android:mimeType="x-conference/*"/>
+                    <data android:mimeType="model/*"/>
+                    <data android:mimeType="chemical/*"/>
     			</intent-filter>
             </activity>
         
