Bug #2474 - java.lang.NullPointerException in nz.mega.android.dr.onCreateView

--- a/src/nz/mega/sdk/.gitignore
+++ b/src/nz/mega/sdk/.gitignore
@@ -36,3 +36,5 @@
 /MegaAccountPurchase.java
 /MegaAccountSession.java
 /MegaAccountTransaction.java
+/MegaContactRequest.java
+/MegaContactRequestList.java
