Lollipop version configuration

--- a/project.properties
+++ b/project.properties
@@ -14,4 +14,5 @@ proguard.config=proguard-android.txt:proguard-project.txt
 target=android-22
 android.library.reference.1=../google-play-services_lib
 android.library.reference.2=../android-support-v7-appcompat_MD
-android.library.reference.3=../AndroidSlidingUpPanel-master/library
+android.library.reference.3=../AndroidSlidingUpPanel
+android.library.reference.4=../RecyclerView
