Task #2523 - Revamping of FileExplorerActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -204,6 +204,27 @@
             </intent-filter>
         </activity>
         
+        <activity 
+            android:name="nz.mega.android.lollipop.FileExplorerActivityLollipop"
+            android:label="@string/app_name"
+            android:theme="@style/login_activity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND_MULTIPLE" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="*/*" />
+            </intent-filter>
+        </activity>
+        
         <activity android:screenOrientation="portrait"
                 android:name="nz.mega.android.providers.FileProviderActivity"
                 android:label="@string/app_name"
