--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -165,6 +165,14 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
+       <activity
+            android:name="nz.mega.android.lollipop.ContactPropertiesActivityLollipop"
+            android:label="@string/contact_properties_activity"
+            android:launchMode="singleTop" 
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
+        </activity>
+        
         <activity
             android:name="ContactFileListActivity"
             android:label="@string/contact_file_list_activity"
