--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,10 +82,10 @@
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden"
             android:screenOrientation="portrait" >
-        </activity>
+        </activity>             
         
         <activity
-            android:name="ManagerActivity"
+            android:name="LauncherActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait" > 
@@ -101,6 +101,21 @@
             
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />         
+        </activity>
+        
+       <activity
+            android:name="ManagerActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" > 
+        
+        </activity>
+        
+        <activity
+            android:name="nz.mega.android.lollipop.ManagerActivityLollipop"
+            android:label="@string/app_name"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >        
         </activity>
         
         <activity 
