--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,16 @@
             android:screenOrientation="portrait" >
         </activity>
         
+       <activity
+            android:name="nz.mega.android.lollipop.TourActivityLollipop"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" 
+            android:theme="@style/login_activity"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait" >
+        </activity>
+        
         <activity
             android:name="InitialCamSyncActivity"
             android:label="@string/section_photo_sync"
