Feature #2701 - New toolbar and new NavigationView in Material Design (links and clicks also implemented)

--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=../google-play-services_lib
 android.library.reference.2=../android-support-v7-appcompat_MD
 android.library.reference.3=../AndroidSlidingUpPanel
 android.library.reference.4=../RecyclerView
+android.library.reference.5=../android-support-design
