--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -294,7 +294,7 @@
         <activity android:screenOrientation="portrait"
                 android:name="nz.mega.android.providers.FileProviderActivity"
                 android:label="@string/app_name"
-            	android:theme="@style/login_activity">
+            	android:theme="@style/provider_activity">
                 <intent-filter>
                     <action
                         android:name="android.intent.action.PICK"/>
