--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -273,7 +273,7 @@
         <activity 
             android:name="nz.mega.android.lollipop.FileExplorerActivityLollipop"
             android:label="@string/app_name"
-            android:theme="@style/login_activity"
+            android:theme="@style/provider_activity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
