--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -227,8 +227,7 @@
             android:name="nz.mega.android.lollipop.ContactPropertiesActivityLollipop"
             android:label="@string/contact_properties_activity"
             android:launchMode="singleTop" 
-            android:screenOrientation="portrait"
-            android:theme="@style/provider_activity">            
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity
