--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -272,7 +272,6 @@
         <activity 
             android:name="nz.mega.android.lollipop.FileExplorerActivityLollipop"
             android:label="@string/app_name"
-            android:theme="@style/provider_activity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -292,8 +291,7 @@
         
         <activity android:screenOrientation="portrait"
                 android:name="nz.mega.android.providers.FileProviderActivity"
-                android:label="@string/app_name"
-            	android:theme="@style/provider_activity">
+                android:label="@string/app_name">
                 <intent-filter>
                     <action
                         android:name="android.intent.action.PICK"/>
@@ -349,6 +347,12 @@
         
         <activity
             android:name="FolderLinkActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+        <activity
+            android:name="nz.mega.android.lollipop.FolderLinkActivityLollipop"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
