Feature #2806 - File Properties Collapsing Toolbar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -211,8 +211,7 @@
             android:name="nz.mega.android.lollipop.FilePropertiesActivityLollipop"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
+            android:screenOrientation="portrait">            
         </activity>
         
         <activity
