--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -211,7 +211,8 @@
             android:name="nz.mega.android.lollipop.FilePropertiesActivityLollipop"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Megaactionbar.Properties">            
         </activity>
         
         <activity
@@ -226,7 +227,8 @@
             android:name="nz.mega.android.lollipop.ContactPropertiesActivityLollipop"
             android:label="@string/contact_properties_activity"
             android:launchMode="singleTop" 
-            android:screenOrientation="portrait">            
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Megaactionbar.Properties">            
         </activity>
         
         <activity
