--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -200,6 +200,13 @@
         </activity>
         
         <activity
+            android:name="nz.mega.android.lollipop.SecureSelfiePreviewActivityLollipop"
+            android:label="@string/full_screen_image_viewer_label"
+            android:launchMode="singleTop"
+            android:uiOptions="splitActionBarWhenNarrow" >
+        </activity>
+        
+        <activity
             android:name="FilePropertiesActivity"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
@@ -342,7 +349,6 @@
         <activity
             android:name="nz.mega.android.lollipop.ContactsExplorerActivityLollipop"
             android:label="@string/app_name"
-            android:theme="@style/login_activity" 
             android:screenOrientation="portrait">
         </activity>
         
