--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -230,9 +230,17 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
-       <activity
+        <activity
             android:name="nz.mega.android.lollipop.ContactPropertiesActivityLollipop"
             android:label="@string/contact_properties_activity"
+            android:launchMode="singleTop" 
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Megaactionbar.Properties">            
+        </activity>
+        
+        <activity
+            android:name="nz.mega.android.lollipop.MyAccountMainActivityLollipop"
+            android:label="@string/section_account"
             android:launchMode="singleTop" 
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Megaactionbar.Properties">            
