--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -264,6 +264,14 @@
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">            
         </activity>
         
+       <activity
+            android:name="nz.mega.android.lollipop.FileContactListActivityLollipop"
+            android:label="@string/file_properties_shared_folder_select_contact"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="portrait">            
+        </activity>
+        
         <activity 
             android:name="FileExplorerActivity"
             android:label="@string/app_name"
