--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -355,6 +355,12 @@
             android:screenOrientation="portrait" >
         </activity>
         
+       <activity
+            android:name="nz.mega.android.lollipop.FileStorageActivityLollipop"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+        
         <activity
             android:name="ContactsExplorerActivity"
             android:label="@string/app_name"
