--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -442,6 +442,12 @@
         </activity>
         
         <activity
+            android:name="nz.mega.android.lollipop.PinLockActivityLollipop"
+            android:label="@string/settings_pin_lock"
+            android:screenOrientation="portrait" >
+        </activity>
+        
+        <activity
             android:name="PinLockActivity"
             android:label="@string/settings_pin_lock"
             android:screenOrientation="portrait" >
