--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -444,6 +444,7 @@
         <activity
             android:name="nz.mega.android.lollipop.PinLockActivityLollipop"
             android:label="@string/settings_pin_lock"
+            android:windowSoftInputMode="stateVisible"
             android:screenOrientation="portrait" >
         </activity>
         
