Task #3006 - Automatic patch for a compilation error in cryptopp (js)

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -107,7 +107,7 @@ $(CRYPTOPP): $(CRYPTOPP_SOURCE_FOLDER)
 
 $(CRYPTOPP_SOURCE_FOLDER): $(CRYPTOPP_VERIFIED_SOURCES)
 	unzip $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) -d $(CRYPTOPP_SOURCE_FOLDER)
-
+	patch $(CRYPTOPP)/cryptopp/wait.h < $(CRYPTOPP)/include.patch
 
 $(CRYPTOPP_VERIFIED_SOURCES):
 	wget -O $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) $(CRYPTOPP_DOWNLOAD_URL)
