Feature #3116 - Add MasterKey file to "Available Offline" if exists

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -151,6 +151,13 @@
             android:screenOrientation="portrait" >            
         </activity>
         
+       <activity 
+            android:name="mega.privacy.android.app.lollipop.OfflineActivityLollipop"
+            android:label="@string/section_saved_for_offline"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" >            
+        </activity>
+        
         <activity android:name="OpenLinkActivity" android:launchMode="singleTask" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" ></action>
