Bug #3221 - Select All in FileStorageActivity doesn't work

--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library.reference.2=../AndroidSlidingUpPanel
 android.library.reference.3=../RecyclerView
 android.library.reference.4=../android-support-design
 android.library.reference.5=../android-support-v7-appcompat_22
+android.library.reference.6=../ScrollParallaxLib
