--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mega.privacy.android.app"
     android:installLocation="auto"
-    android:versionCode="92"
-    android:versionName="2.6.4" >
+    android:versionCode="1"
+    android:versionName="3.0.beta_0" >
 
     <uses-sdk
-        android:minSdkVersion="9"
-        android:targetSdkVersion="22" />
+        android:minSdkVersion="21"
+        android:targetSdkVersion="23" />
 
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
@@ -28,6 +28,8 @@
     <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS"/>
 
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    
+    <uses-permission android:name="com.android.vending.BILLING" />
         
     <application
         android:name="MegaApplication"
