Update project.properties to previous version

--- a/project.properties
+++ b/project.properties
@@ -11,10 +11,10 @@
 proguard.config=proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-23
+target=android-22
 android.library.reference.1=../AndroidSlidingUpPanel
 android.library.reference.2=../ScrollParallaxLib
 android.library.reference.3=../RecyclerView
-android.library.reference.4=../android-support-design-23
-android.library.reference.5=../android-support-v7-appcompat-23
-android.library.reference.6=../google-play-services_lib-28
+android.library.reference.4=../android-support-design
+android.library.reference.5=../android-support-v7-appcompat_22
+android.library.reference.6=../google-play-services_lib
