--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mega.privacy.android.app"
     android:installLocation="auto"
-    android:versionCode="10"
-    android:versionName="3.0.beta_3" >
+    android:versionCode="11"
+    android:versionName="3.0.beta" >
 
     <uses-sdk
         android:minSdkVersion="21"
