Bug #3680 - Change Password screen (light vs dark) on Android 4.x

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -426,7 +426,8 @@
         <activity
             android:name="ChangePasswordActivity"
             android:label="@string/my_account_change_password" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Megaactionbar.Light">
         </activity>
         
         <activity
