Bug #3794 - Share to MEGA shows twice the app (Lollipop and non-Lollipop) no matter the Android version you have (reported by user, @valentina, @navarro and @jorge)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -288,8 +288,8 @@
             android:screenOrientation="portrait">            
         </activity>
         
-        <activity 
-            android:name="FileExplorerActivity"
+       <activity 
+            android:name="LauncherFileExplorerActivity"
             android:label="@string/app_name"
             android:theme="@style/login_activity"
             android:screenOrientation="portrait">
@@ -310,23 +310,16 @@
         </activity>
         
         <activity 
+            android:name="FileExplorerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/login_activity"
+            android:screenOrientation="portrait">
+        </activity>
+        
+        <activity 
             android:name="mega.privacy.android.app.lollipop.FileExplorerActivityLollipop"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.SEND" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="*/*" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.SEND_MULTIPLE" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="*/*" />
-            </intent-filter>
         </activity>
         
         <activity android:screenOrientation="portrait"
