Updated build scripts

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -18,6 +18,15 @@ CRYPTOPP_SOURCE_FOLDER=$(CRYPTOPP)/$(CRYPTOPP)
 CRYPTOPP_DOWNLOAD_URL=http://www.cryptopp.com/$(CRYPTOPP_SOURCE_FILE)
 CRYPTOPP_VERIFIED_SOURCES=$(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE)_verified
 
+SQLITE=sqlite
+SQLITE_VERSION=3080702
+SQLITE_YEAR=2014
+SQLITE_BASE_NAME=sqlite-amalgamation-$(SQLITE_VERSION)
+SQLITE_SOURCE_FILE=$(SQLITE_BASE_NAME).zip
+SQLITE_SOURCE_FOLDER=$(SQLITE)/$(SQLITE)
+SQLITE_DOWNLOAD_URL=http://www.sqlite.org/$(SQLITE_YEAR)/$(SQLITE_SOURCE_FILE)
+SQLITE_VERIFIED_SOURCES=$(SQLITE)/$(SQLITE_SOURCE_FILE)_verified
+
 CURL=curl
 CURL_VERSION=7.45.0
 C_ARES_VERSION=1.10.0
@@ -56,7 +65,7 @@ MEGA_JAVA_OUTPUT_PATH=$(JNI_PATH)/../src
 MEGA_CONFIGURED=java_wrap.cxx
 MEGA_WRAPPER=sdk/bindings/megaapi.i
 
-all: $(CRYPTOPP) $(CURL) $(MEGA) #$(SODIUM) 
+all: $(CRYPTOPP) $(CURL) $(SQLITE) $(MEGA)
 	$(NDK_BUILD)
 
 $(OPENSSL): $(OPENSSL_CONFIGURED)
@@ -114,6 +123,18 @@ $(CRYPTOPP_VERIFIED_SOURCES):
 	cd $(CRYPTOPP); sha1sum -c $(CRYPTOPP_SOURCE_FILE).sha1
 	touch $(CRYPTOPP_VERIFIED_SOURCES)
 
+
+$(SQLITE): $(SQLITE_SOURCE_FOLDER)
+
+$(SQLITE_SOURCE_FOLDER): $(SQLITE_VERIFIED_SOURCES)
+	unzip -o $(SQLITE)/$(SQLITE_SOURCE_FILE) -d $(SQLITE)
+	ln -fs $(SQLITE_BASE_NAME) $(SQLITE_SOURCE_FOLDER)
+
+$(SQLITE_VERIFIED_SOURCES):
+	wget -O $(SQLITE)/$(SQLITE_SOURCE_FILE) $(SQLITE_DOWNLOAD_URL)
+	cd $(SQLITE); sha1sum -c $(SQLITE_SOURCE_FILE).sha1
+	touch $(SQLITE_VERIFIED_SOURCES)
+
 $(SODIUM): $(SODIUM_BUILT)
 
 $(SODIUM_BUILT): $(SODIUM_VERIFIED_SOURCES)
@@ -136,6 +157,7 @@ clean_mega:
 
 clean: clean_mega
 	rm -rf $(CRYPTOPP_SOURCE_FOLDER)
+	rm -rf $(SQLITE_SOURCE_FOLDER) $(SQLITE)/$(SQLITE_BASE_NAME)
 	rm -rf $(CURL)/$(CURL_SOURCE_FOLDER)
 	rm -rf $(CURL)/$(CURL)	
 	rm -rf $(CURL)/$(ARES_SOURCE_FOLDER)
@@ -150,6 +172,7 @@ clean: clean_mega
 
 veryclean: clean
 	rm -rf $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) $(CRYPTOPP_VERIFIED_SOURCES)
+	rm -rf $(SQLITE)/$(SQLITE_SOURCE_FILE) $(SQLITE_VERIFIED_SOURCES)
 	rm -rf $(CURL)/$(CURL_SOURCE_FILE) $(CURL_VERIFIED_SOURCES)
 	rm -rf $(CURL)/$(ARES_SOURCE_FILE) $(ARES_VERIFIED_SOURCES)
 	rm -rf $(OPENSSL)/$(OPENSSL_SOURCE_FILE) $(OPENSSL_VERIFIED_SOURCES)
