--- a/jni/curl/.gitignore
+++ b/jni/curl/.gitignore
@@ -1,8 +1,4 @@
 /ares
-/c-ares-1.10.0
 /curl
-/curl-7.45.0
-/c-ares-1.10.0.tar.gz
-/c-ares-1.10.0.tar.gz_verified
-/curl-7.45.0.tar.gz
-/curl-7.45.0.tar.gz_verified
+/c-ares-*
+/curl-*
