Minor changes on build scripts

--- a/jni/mega/MakefileBindings
+++ b/jni/mega/MakefileBindings
@@ -1,18 +1,9 @@
 include Makefile.inc
 
-BINDINGS=python java
+BINDINGS=java
 
 all: $(BINDINGS)
 
-$(PYTHON_LIBRARY): $(OBJECTS) $(C_WRAPPER_OBJECTS) $(PYTHON_OBJECTS)
-	$(CXX) -shared $(CPPFLAGS) $(CFLAGS_PYTHON_LIBRARY) $(LDFLAGS) $^ -o $@ $(LIB_PYTHON_LIBRARY)
-
-$(PYTHON_OBJECTS): $(PYTHON_WRAPS) $(HEADERS)
-	$(CXX) -c $(CPPFLAGS) $(CFLAGS_PYTHON_LIBRARY) $(PYTHON_WRAPS) -o $@
-	
-$(PYTHON_WRAPS) $(PYTHON_BINDINGS): $(SWIG_INTERFACE) $(HEADERS)
-	$(SWIG) -c++ -python -threads -outdir $(PYTHON_OUTPUT_PATH) -o $(PYTHON_WRAPS) $(SWIG_INTERFACE)
-	
 $(JAVA_LIBRARY): $(OBJECTS) $(C_WRAPPER_OBJECTS) $(JAVA_OBJECTS)
 	$(CXX) -shared $(CPPFLAGS) $(CFLAGS_JAVA_LIBRARY) $(LDFLAGS) $^ -o $@ $(LIB_JAVA_LIBRARY)
 
