--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -321,6 +321,11 @@
         
         <activity android:screenOrientation="portrait"
                 android:name="mega.privacy.android.app.providers.FileProviderActivity"
+                android:label="@string/app_name">                
+       </activity>
+       
+       <activity android:screenOrientation="portrait"
+                android:name="mega.privacy.android.app.providers.PinFileProviderActivity"
                 android:label="@string/app_name">
                 <intent-filter>
                     <action
@@ -351,7 +356,7 @@
                     <data android:mimeType="model/*"/>
                     <data android:mimeType="chemical/*"/>
     			</intent-filter>
-            </activity>
+       </activity>
         
         <activity
             android:name="FileStorageActivity"
