Adjust output path for Java bindings

--- a/app/src/main/jni/Makefile
+++ b/app/src/main/jni/Makefile
@@ -61,7 +61,7 @@ SODIUM_VERIFIED_SOURCES=$(SODIUM)/$(SODIUM_SOURCE_FILE)_verified
 SODIUM_BUILT=$(SODIUM)/$(SODIUM_SOURCE_FILE)_built
 
 MEGA=mega
-MEGA_JAVA_OUTPUT_PATH=$(JNI_PATH)/../src
+MEGA_JAVA_OUTPUT_PATH=$(JNI_PATH)/../java
 MEGA_CONFIGURED=java_wrap.cxx
 MEGA_WRAPPER=sdk/bindings/megaapi.i
 
