--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,13 @@ android {
         versionName "3.0.3"
     }
 
-    sourceSets {
-        main.jni.srcDirs = [] //disable automatic ndk-build
-        main.java.srcDirs += 'src/main/jni/mega/sdk/bindings/java/nz/mega/sdk'
-        main.java {
+    sourceSets.main {
+        java {
+            srcDirs += 'src/main/jni/mega/sdk/bindings/java/nz/mega/sdk'
             exclude '**/MegaApiSwing.java'
         }
+        jni.srcDirs = [] //disable automatic ndk-build
+        jniLibs.srcDir 'src/main/libs' // This is not necessary unless you have precompiled libraries in your project.
     }
 
     buildTypes {
