Upgrade Android libs ( @javiserrano )

--- a/jni/Makefile
+++ b/jni/Makefile
@@ -12,15 +12,15 @@ CC=$(shell $(NDK_ROOT)/ndk-which gcc)
 LIBDIR=$(JNI_PATH)/../obj/local/armeabi
 
 CRYPTOPP=cryptopp
-CRYPTOPP_VERSION=562
+CRYPTOPP_VERSION=563
 CRYPTOPP_SOURCE_FILE=cryptopp$(CRYPTOPP_VERSION).zip
 CRYPTOPP_SOURCE_FOLDER=$(CRYPTOPP)/$(CRYPTOPP)
 CRYPTOPP_DOWNLOAD_URL=http://www.cryptopp.com/$(CRYPTOPP_SOURCE_FILE)
 CRYPTOPP_VERIFIED_SOURCES=$(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE)_verified
 
 SQLITE=sqlite
-SQLITE_VERSION=3080702
-SQLITE_YEAR=2014
+SQLITE_VERSION=3120000
+SQLITE_YEAR=2016
 SQLITE_BASE_NAME=sqlite-amalgamation-$(SQLITE_VERSION)
 SQLITE_SOURCE_FILE=$(SQLITE_BASE_NAME).zip
 SQLITE_SOURCE_FOLDER=$(SQLITE)/$(SQLITE)
@@ -44,7 +44,7 @@ ARES_DOWNLOAD_URL=http://c-ares.haxx.se/download/$(ARES_SOURCE_FILE)
 ARES_VERIFIED_SOURCES=$(CURL)/$(ARES_SOURCE_FILE)_verified
 
 OPENSSL=openssl
-OPENSSL_VERSION=1.0.1j
+OPENSSL_VERSION=1.0.1s
 OPENSSL_SOURCE_FILE=openssl-$(OPENSSL_VERSION).tar.gz
 OPENSSL_SOURCE_FOLDER=$(OPENSSL)-$(OPENSSL_VERSION)
 OPENSSL_DOWNLOAD_URL=http://www.openssl.org/source/$(OPENSSL_SOURCE_FILE)
@@ -53,7 +53,7 @@ OPENSSL_CONFIGURED=openssl/openssl/lib/libcrypto.a
 OPENSSL_PREFIX=$(JNI_PATH)/$(OPENSSL)/$(OPENSSL_SOURCE_FOLDER)
 
 SODIUM=sodium
-SODIUM_VERSION=1.0.1
+SODIUM_VERSION=1.0.9
 SODIUM_SOURCE_FILE=libsodium-$(SODIUM_VERSION).tar.gz
 SODIUM_SOURCE_FOLDER=libsodium-$(SODIUM_VERSION)
 SODIUM_DOWNLOAD_URL=https://download.libsodium.org/libsodium/releases/$(SODIUM_SOURCE_FILE)
@@ -74,6 +74,8 @@ $(OPENSSL_CONFIGURED): $(OPENSSL_VERIFIED_SOURCES)
 	cd $(OPENSSL)/; tar --overwrite -xf $(OPENSSL_SOURCE_FILE)
 	ln -sf $(OPENSSL_SOURCE_FOLDER) $(OPENSSL)/$(OPENSSL)
 	ln -sf $(LIBDIR) $(OPENSSL)/$(OPENSSL_SOURCE_FOLDER)/lib
+	cd $(OPENSSL)/$(OPENSSL)/; ./Configure android
+	make depend -C $(OPENSSL)/$(OPENSSL)
 	-$(NDK_BUILD) -k ssl crypto
 	
 $(OPENSSL_VERIFIED_SOURCES):
@@ -116,7 +118,6 @@ $(CRYPTOPP): $(CRYPTOPP_SOURCE_FOLDER)
 
 $(CRYPTOPP_SOURCE_FOLDER): $(CRYPTOPP_VERIFIED_SOURCES)
 	unzip $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) -d $(CRYPTOPP_SOURCE_FOLDER)
-	patch $(CRYPTOPP)/cryptopp/wait.h < $(CRYPTOPP)/include.patch
 
 $(CRYPTOPP_VERIFIED_SOURCES):
 	wget -O $(CRYPTOPP)/$(CRYPTOPP_SOURCE_FILE) $(CRYPTOPP_DOWNLOAD_URL)
