--- a/jni/openssl/.gitignore
+++ b/jni/openssl/.gitignore
@@ -1,10 +1,3 @@
 /openssl
-/openssl-1.0.1e
-/openssl-1.0.1e.tar.gz
-/openssl-1.0.1e.tar.gz_verified
-/openssl-1.0.1h
-/openssl-1.0.1h.tar.gz
-/openssl-1.0.1h.tar.gz_verified
-/openssl-1.0.1j
-/openssl-1.0.1j.tar.gz
-/openssl-1.0.1j.tar.gz_verified
+/openssl-*
+!/openssl-*.sha1
