--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    task megaSDK(type: Exec) {
+
+        workingDir 'src/main/jni'
+        commandLine 'make'
+
+//        // call regular ndk-build(.cmd) script from main src directory
+//        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+//            commandLine 'ndk-build.cmd', '-C', file('src/main').absolutePath
+//        } else {
+//            commandLine 'ndk-build', '-C', file('src/main/').absolutePath
+//        }
+    }
+
+    tasks.withType(JavaCompile) {
+        compileTask -> compileTask.dependsOn megaSDK
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services-wallet:8.4.0'
