--- a/app/src/main/jni/sodium/.gitignore
+++ b/app/src/main/jni/sodium/.gitignore
@@ -1,10 +1,3 @@
-/libsodium-0.6.0
-/libsodium-0.6.0.tar.gz
-/libsodium-0.6.0.tar.gz_built
-/libsodium-0.6.0.tar.gz_verified
-/libsodium-1.0.1
-/libsodium-1.0.1.tar.gz
-/libsodium-1.0.1.tar.gz_built
-/libsodium-1.0.1.tar.gz_verified
+/libsodium-*
 /sodium
-
+!/libsodium-*.sha1
