Add cleaning of SDK to Gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         }
     }
 
-    task megaSDK(type: Exec) {
+    task megaSDK(type: Exec, description: 'Compile MEGA SDK via NDK') {
         workingDir 'src/main/jni'
         commandLine 'make'
     }
@@ -40,6 +40,13 @@ android {
     tasks.withType(JavaCompile) {
         compileTask -> compileTask.dependsOn megaSDK
     }
+
+    task cleanMegaSDK(type: Exec, description: 'Clean MEGA SDK object files') {
+        workingDir 'src/main/jni'
+        commandLine 'make', 'clean_mega'
+    }
+
+    clean.dependsOn 'cleanMegaSDK'
 }
 
 dependencies {
