--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS"/>
-
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="com.android.vending.BILLING" />
         
     <application
@@ -381,6 +381,12 @@
         
         <activity
             android:name="mega.privacy.android.app.lollipop.ContactsExplorerActivityLollipop"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name="mega.privacy.android.app.lollipop.PhoneContactsActivityLollipop"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
