Add `libuv` dependency

--- a/app/src/main/jni/Makefile
+++ b/app/src/main/jni/Makefile
@@ -60,6 +60,13 @@ SODIUM_DOWNLOAD_URL=https://download.libsodium.org/libsodium/releases/$(SODIUM_S
 SODIUM_VERIFIED_SOURCES=$(SODIUM)/$(SODIUM_SOURCE_FILE)_verified
 SODIUM_BUILT=$(SODIUM)/$(SODIUM_SOURCE_FILE)_built
 
+LIBUV=libuv
+LIBUV_VERSION=1.8.0
+LIBUV_SOURCE_FILE=libuv-v$(LIBUV_VERSION).tar.gz
+LIBUV_SOURCE_FOLDER=libuv-v$(LIBUV_VERSION)
+LIBUV_DOWNLOAD_URL=http://dist.libuv.org/dist/v$(LIBUV_VERSION)/$(LIBUV_SOURCE_FILE)
+LIBUV_VERIFIED_SOURCES=$(LIBUV)/$(LIBUV_SOURCE_FILE)_verified
+
 MEGA=mega
 MEGA_JAVA_OUTPUT_PATH=$(JNI_PATH)/../java
 MEGA_CONFIGURED=java_wrap.cxx
@@ -152,6 +159,17 @@ $(SODIUM_VERIFIED_SOURCES):
 	wget -O $(SODIUM)/$(SODIUM_SOURCE_FILE) $(SODIUM_DOWNLOAD_URL)
 	cd $(SODIUM); sha1sum -c $(SODIUM_SOURCE_FILE).sha1
 	touch $(SODIUM_VERIFIED_SOURCES)
+
+$(LIBUV): $(LIBUV_SOURCE_FOLDER)
+
+$(LIBUV_SOURCE_FOLDER): $(LIBUV_VERIFIED_SOURCES)
+	cd $(LIBUV)/; tar --overwrite -xf $(LIBUV_SOURCE_FILE)
+	ln -sf $(LIBUV_SOURCE_FOLDER) $(LIBUV)/$(LIBUV)	
+
+$(LIBUV_VERIFIED_SOURCES):
+	wget -O $(LIBUV)/$(LIBUV_SOURCE_FILE) $(LIBUV_DOWNLOAD_URL)
+	cd $(LIBUV); sha1sum -c $(LIBUV_SOURCE_FILE).sha1
+	touch $(LIBUV_VERIFIED_SOURCES)
 
 clean_mega:
 	-make -C $(MEGA) -f MakefileBindings clean JAVA_BASE_OUTPUT_PATH=$(MEGA_JAVA_OUTPUT_PATH)
