--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -141,8 +141,7 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.ManagerActivityLollipop"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait" >   
+            android:launchMode="singleTop">
             
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
