--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -314,8 +314,8 @@
         
         <activity 
             android:name="mega.privacy.android.app.lollipop.FileExplorerActivityLollipop"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
         </activity>
         
         <activity android:screenOrientation="portrait"
@@ -380,8 +380,7 @@
         
         <activity
             android:name="mega.privacy.android.app.lollipop.ContactsExplorerActivityLollipop"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name">
         </activity>
 
         <activity
@@ -463,8 +462,7 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.PinLockActivityLollipop"
             android:label="@string/settings_pin_lock"
-            android:windowSoftInputMode="stateVisible"
-            android:screenOrientation="portrait" >
+            android:windowSoftInputMode="stateVisible">
         </activity>
         
         <activity
