--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,8 +55,7 @@
             android:launchMode="singleTop" 
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" >
+            android:windowSoftInputMode="stateHidden">
         </activity>
         
         <activity
@@ -73,8 +72,7 @@
             android:theme="@style/login_activity"
             android:label="@string/login_text" 
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" >            
+            android:windowSoftInputMode="stateHidden">
         </activity> 
         
          <activity
@@ -89,8 +87,7 @@
             android:name="mega.privacy.android.app.lollipop.ChooseAccountActivityLollipop"
             android:label="@string/choose_account_activity" 
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" >            
+            android:windowSoftInputMode="stateHidden">
         </activity>
          
         <activity
@@ -107,8 +104,7 @@
             android:label="@string/create_account_text"
             android:theme="@style/login_activity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait" >
+            android:windowSoftInputMode="stateHidden">
         </activity> 
         
         <activity
@@ -162,7 +158,7 @@
             android:name="mega.privacy.android.app.lollipop.OfflineActivityLollipop"
             android:label="@string/section_saved_for_offline"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait" >            
+            android:configChanges="orientation|screenSize">
         </activity>
         
         <activity android:name="OpenLinkActivity" android:launchMode="singleTask" android:screenOrientation="portrait" >
@@ -231,7 +227,6 @@
             android:name="mega.privacy.android.app.lollipop.FilePropertiesActivityLollipop"
             android:label="@string/file_properties_activity"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"
             android:theme="@style/Theme.Megaactionbar.Properties">            
         </activity>
         
@@ -246,16 +241,16 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.ContactPropertiesActivityLollipop"
             android:label="@string/contact_properties_activity"
-            android:launchMode="singleTop" 
-            android:screenOrientation="portrait"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/Theme.Megaactionbar.Properties">            
         </activity>
         
         <activity
             android:name="mega.privacy.android.app.lollipop.MyAccountMainActivityLollipop"
             android:label="@string/section_account"
-            android:launchMode="singleTop" 
-            android:screenOrientation="portrait"
+            android:launchMode="singleTop"
+            android:configChanges="orientation|screenSize"
             android:theme="@style/Theme.Megaactionbar.Properties">            
         </activity>
         
@@ -281,8 +276,7 @@
             android:name="mega.privacy.android.app.lollipop.FileContactListActivityLollipop"
             android:label="@string/file_properties_shared_folder_select_contact"
             android:launchMode="singleTop"
-            android:configChanges="orientation|screenSize"
-            android:screenOrientation="portrait">            
+           android:configChanges="orientation|screenSize">
         </activity>
         
        <activity 
@@ -318,8 +312,7 @@
             android:label="@string/app_name">
         </activity>
         
-        <activity android:screenOrientation="portrait"
-                android:name="mega.privacy.android.app.providers.PinFileProviderActivity"
+        <activity android:name="mega.privacy.android.app.providers.PinFileProviderActivity"
                 android:label="@string/app_name">                
        </activity>
        
@@ -368,7 +361,7 @@
        <activity
             android:name="mega.privacy.android.app.lollipop.FileStorageActivityLollipop"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+           android:configChanges="orientation|screenSize">
         </activity>
         
         <activity
@@ -385,8 +378,7 @@
 
         <activity
             android:name="mega.privacy.android.app.lollipop.PhoneContactsActivityLollipop"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name">
         </activity>
         
         <activity
@@ -398,7 +390,7 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.FolderLinkActivityLollipop"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize">
         </activity>
         
         <activity
@@ -412,7 +404,7 @@
             android:name="mega.privacy.android.app.lollipop.FileLinkActivityLollipop"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait">            
+            android:configChanges="orientation|screenSize">
         </activity>
         
         <activity
@@ -431,8 +423,7 @@
         
         <activity
             android:name="mega.privacy.android.app.lollipop.ChangePasswordActivityLollipop"
-            android:label="@string/my_account_change_password" 
-            android:screenOrientation="portrait">
+            android:label="@string/my_account_change_password">
         </activity>
         
         <activity
@@ -480,7 +471,7 @@
         <activity
             android:name="mega.privacy.android.app.lollipop.ZipBrowserActivityLollipop"
             android:label="@string/zip_browser_activity"
-            android:screenOrientation="portrait" >
+            android:configChanges="orientation|screenSize" >
         </activity>
         
         <service
