--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,9 +69,9 @@
        <activity
             android:name="mega.privacy.android.app.lollipop.LoginActivityLollipop"
             android:theme="@style/login_activity"
-            android:label="@string/login_text" 
+            android:label="@string/login_text"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateAlwaysHidden">
         </activity> 
         
          <activity
