Fix libuv dependency

--- a/app/src/main/jni/mega/Makefile.inc
+++ b/app/src/main/jni/mega/Makefile.inc
@@ -54,7 +54,8 @@ CPP_SOURCES= sdk/src/attrmap.cpp \
     sdk/src/gfx.cpp \
     sdk/src/gfx/external.cpp \
     sdk/src/thread/posixthread.cpp \
-    sdk/src/logging.cpp
+    sdk/src/logging.cpp \
+    sdk/src/mega_http_parser.cpp
     
 C_SOURCES = sdk/third_party/glob/glob.c
 
@@ -102,7 +103,8 @@ HEADERS= sdk/include/mega.h \
         sdk/third_party/glob/glob.h \
         sdk/include/mega/gfx/external.h \
         sdk/include/mega/thread/posixthread.h \
-        sdk/include/mega/logging.h
+        sdk/include/mega/logging.h \
+	sdk/include/mega/mega_http_parser.h
 
 OBJECTS=$(CPP_SOURCES:.cpp=.o) $(C_SOURCES:.c=.o)
 C_WRAPPER_SOURCES = sdk/src/megaapi.cpp sdk/src/megaapi_impl.cpp
