--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mega.privacy.android.app"
     android:installLocation="auto"
-    android:versionCode="54"
-    android:versionName="3.0.11.1" >
+    android:versionCode="59"
+    android:versionName="3.0.11.2" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -72,9 +72,21 @@
             android:label="@string/login_text"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateAlwaysHidden">
-        </activity> 
-        
-         <activity
+        </activity>
+
+        <activity
+            android:name="WebViewActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTop" >
+        </activity>
+
+        <activity
+            android:name="mega.privacy.android.app.lollipop.WebViewActivityLollipop"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
             android:name="ChooseAccountActivity"
             android:label="@string/choose_account_activity" 
             android:configChanges="orientation|screenSize"
@@ -166,12 +178,26 @@
                 <category android:name="android.intent.category.BROWSABLE" ></category>
                 <data android:host="mega.co.nz" android:scheme="https" > </data>
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" ></action>
+                <category android:name="android.intent.category.DEFAULT" ></category>
+                <category android:name="android.intent.category.BROWSABLE" ></category>
+                <data android:host="www.mega.co.nz" android:scheme="https" > </data>
+            </intent-filter>
             
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" ></action>
                 <category android:name="android.intent.category.DEFAULT" ></category>
                 <category android:name="android.intent.category.BROWSABLE" ></category>
                 <data android:host="mega.nz" android:scheme="https" > </data>
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" ></action>
+                <category android:name="android.intent.category.DEFAULT" ></category>
+                <category android:name="android.intent.category.BROWSABLE" ></category>
+                <data android:host="www.mega.nz" android:scheme="https" > </data>
             </intent-filter>
             
             <intent-filter>
