--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "mega.privacy.android.app"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 60
-        versionName "3.0.11.3.alfa"
+        versionCode 61
+        versionName "3.0.11.3.alfa.2"
     }
 
     sourceSets.main {
